css/parser/tests/errors/number/eof/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/number/eof/input.css:2:11
  |
2 |   prop: 12
  |           ^

